@@ -16,6 +16,7 @@ $Id$
     Jonathan Abbey <jonabbey@ganymeta.org>
 
 * Made errors during IP/MAC address discovery non-fatal
+* Added cummulative line totals ("T")
 
 0.12 21/05/03
 
